src/test/deca/syntax/invalid/synt/missingCBrace.deca
// @expected_output deca:4:0
{

